init commit, added crud features, service, and components as directives

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <body>
 
     <app>
-      Loading...
+      Loading... Angular 2 Example App
     </app>
 
     <script src="polyfills.bundle.js"></script>
